// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SLOLogContent should render SLOLogContent component of type Execution Log 1`] = `
<div>
  <div>
    <div>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-variation-form-title StyledProps--border StyledProps--border-bottom StyledProps--padding-top-xlarge StyledProps--padding-right-xlarge StyledProps--padding-bottom-small StyledProps--padding-left-xlarge"
        level="2"
      >
        cv.executionLogs
      </h2>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
      >
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400"
          >
            connectors.cdng.monitoredService.label
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-tiny StyledProps--font-weight-bold StyledProps--padding-right-xsmall"
              style="max-width: 100px; --text-line-clamp: 1;"
            >
              SERVICE_NAME
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-tiny-semi"
            >
              /
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey700"
              style="max-width: 100px; --text-line-clamp: 1;"
            >
              ENV_NAME
            </p>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-left"
        />
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 230px;"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="cv.lastOneHour"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <label
          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        >
          <input
            type="checkbox"
          />
          <span
            class="bp3-control-indicator"
          />
          cv.displayOnlyErrors
        </label>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-small StyledProps--background-primary10 StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey700"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-left-medium"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-variation-body"
          style="--text-line-clamp: 1; display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="info"
          >
            <svg
              height="15"
              viewBox="0 0 12 12"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          cv.showingLogsFor cv.lastonehour from DUMMY_DATE to DUMMY_DATE.
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="bp3-input-group ui-search-box ExpandingSearchInput--main  ExpandingSearchInput--flip  ExpandingSearchInput--dark"
            data-name=""
          >
            <span
              class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
              data-icon="thinner-search"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <input
              class="bp3-input  ExpandingSearchInput--find"
              dir="auto"
              placeholder="Search"
              style="padding-right: 0px;"
              type="search"
              value=""
            />
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey200"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
        <div
          class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-left StyledProps--border-color-grey700"
        />
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
            data-icon="command-install"
          >
            <svg
              height="16"
              viewBox="0 0 14 14"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.4 10.2c.2.2.4.3.6.3s.5-.1.6-.3l3.5-3.5c.2-.2.3-.4.3-.6 0-.5-.4-.9-.9-.9-.2 0-.5.1-.6.3l-2 2V.9C7.9.4 7.5 0 7 0s-.9.4-.9.9v6.6l-2-2c-.1-.2-.4-.3-.6-.3-.5 0-.9.4-.9.9 0 .2.1.5.3.6zm6.7-.6c-.5 0-.9.4-.9.9v1.8H1.8v-1.8c0-.5-.4-.9-.9-.9s-.9.4-.9.9v2.6c0 .5.4.9.9.9h12.2c.5 0 .9-.4.9-.9v-2.6c0-.5-.4-.9-.9-.9z"
                fill="#4d5969"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            cv.download
          </span>
        </button>
      </div>
    </div>
    <div
      class="main"
    >
      <pre
        class="container"
      >
        <div
          data-test-id="virtuoso-scroller"
          data-virtuoso-scroller="true"
          height="100%"
          style="height: 100%; outline: none; overflow-y: auto; position: relative;"
          tabindex="0"
        >
          <div
            data-viewport-type="element"
            style="width: 100%; height: 100%; position: absolute; top: 0px;"
          >
            <div
              data-test-id="virtuoso-item-list"
              style="box-sizing: border-box; padding-top: 0px; padding-bottom: 0px; margin-top: 0px;"
            />
          </div>
        </div>
      </pre>
      <div
        class="footer"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
        >
          <div
            class="StyledProps--font StyledProps--main"
            style="width: 80%;"
          />
          <div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main button StyledProps--margin-right-small Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary Button--size Button--small"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="down"
              >
                <svg
                  height="16"
                  viewBox="0 0 14 10"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.207 6.125l5.78 2.75 5.806-2.75m-11.586-5l5.78 2.75 5.806-2.75"
                    fill="none"
                    stroke="#3E7BFA"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                pipeline.verification.loadMore
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main button Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary Button--size Button--small"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-arrow-down StyledProps--main StyledProps--padding-right-xsmall"
                icon="arrow-down"
              >
                <svg
                  data-icon="arrow-down"
                  height="10"
                  viewBox="0 0 16 16"
                  width="10"
                >
                  <desc>
                    arrow-down
                  </desc>
                  <path
                    d="M13 8c-.3 0-.5.1-.7.3L9 11.6V2c0-.5-.4-1-1-1s-1 .5-1 1v9.6L3.7 8.3C3.5 8.1 3.3 8 3 8c-.5 0-1 .5-1 1 0 .3.1.5.3.7l5 5c.2.2.4.3.7.3s.5-.1.7-.3l5-5c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                cv.bottom
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SLOLogContent should render SLOLogContent component of type External API Call Log 1`] = `
<div>
  <div>
    <div>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--font-variation-form-title StyledProps--border StyledProps--border-bottom StyledProps--padding-top-xlarge StyledProps--padding-right-xlarge StyledProps--padding-bottom-small StyledProps--padding-left-xlarge"
        level="2"
      >
        cv.externalAPICalls
      </h2>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
      >
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400"
          >
            connectors.cdng.monitoredService.label
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-tiny StyledProps--font-weight-bold StyledProps--padding-right-xsmall"
              style="max-width: 100px; --text-line-clamp: 1;"
            >
              SERVICE_NAME
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-variation-tiny-semi"
            >
              /
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey700"
              style="max-width: 100px; --text-line-clamp: 1;"
            >
              ENV_NAME
            </p>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-left"
        />
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 230px;"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  placeholder="- Select -"
                  style="padding-right: 0px;"
                  type="text"
                  value="cv.lastOneHour"
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                    icon="chevron-down"
                  >
                    <svg
                      data-icon="chevron-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        chevron-down
                      </desc>
                      <path
                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <label
          class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        >
          <input
            type="checkbox"
          />
          <span
            class="bp3-control-indicator"
          />
          cv.displayOnlyErrors
        </label>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--padding-small StyledProps--background-grey100 StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-left-medium"
      >
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-variation-body"
          style="--text-line-clamp: 1; display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="info"
          >
            <svg
              height="15"
              viewBox="0 0 12 12"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          cv.showingLogsFor cv.lastonehour from DUMMY_DATE to DUMMY_DATE.
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
        <div
          class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-left StyledProps--border-color-grey200"
        />
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
            data-icon="command-install"
          >
            <svg
              height="16"
              viewBox="0 0 14 14"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.4 10.2c.2.2.4.3.6.3s.5-.1.6-.3l3.5-3.5c.2-.2.3-.4.3-.6 0-.5-.4-.9-.9-.9-.2 0-.5.1-.6.3l-2 2V.9C7.9.4 7.5 0 7 0s-.9.4-.9.9v6.6l-2-2c-.1-.2-.4-.3-.6-.3-.5 0-.9.4-.9.9 0 .2.1.5.3.6zm6.7-.6c-.5 0-.9.4-.9.9v1.8H1.8v-1.8c0-.5-.4-.9-.9-.9s-.9.4-.9.9v2.6c0 .5.4.9.9.9h12.2c.5 0 .9-.4.9-.9v-2.6c0-.5-.4-.9-.9-.9z"
                fill="#4d5969"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            cv.download
          </span>
        </button>
      </div>
    </div>
    <div
      class="accordionContainer"
    >
      <div
        class="Layout--vertical StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main container"
        >
          <div
            class="Collapse--main collapse error"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header collapseHeader"
            >
              <div
                class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                  data-icon="main-chevron-down"
                >
                  <svg
                    height="10"
                    viewBox="0 0 14 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                      fill="#4d5969"
                    />
                  </svg>
                </span>
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-left-small"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey400"
                  >
                    DUMMY_DATE
                  </p>
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey900"
                    style="--text-line-clamp: 1;"
                  >
                    cv.fetchingDataFrom undefined
                  </p>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              />
            </div>
            <div
              class="Collapse--collapse"
            >
              <div
                class="bp3-collapse"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(-undefinedpx);"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-top StyledProps--padding-left-medium StyledProps--padding-right-medium"
        >
          <div
            class="Layout--horizontal StyledProps--main Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
          >
            <span
              class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
            >
              1
               of 
              1
            </span>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="arrow-left"
                >
                  <svg
                    data-icon="arrow-left"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-left
                    </desc>
                    <path
                      d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Prev
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Pagination--roundedButton Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  2
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Next
                </span>
                <span
                  class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                  icon="arrow-right"
                >
                  <svg
                    data-icon="arrow-right"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      arrow-right
                    </desc>
                    <path
                      d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span>
              Showing 20 per page
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
